19_9_design and security

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -6,6 +6,7 @@
     "role": "Role",
     "admin": "Admin",
     "user": "User",
-    "loginButton": "Login"
+    "loginButton": "Login",
+    "loggingIn": "Logging in..."
   }
 }
