--- a/src/i18n/ar.json
+++ b/src/i18n/ar.json
@@ -6,6 +6,7 @@
     "role": "الدور",
     "admin": "مدير",
     "user": "مستخدم",
-    "loginButton": "تسجيل الدخول"
+    "loginButton": "تسجيل الدخول",
+    "loggingIn": "جاري تسجيل الدخول..."
   }
 }
